--- a/_layouts/paper.html
+++ b/_layouts/paper.html
@@ -17,6 +17,8 @@ layout: default
 				{{ page.authors }}
 				({{ page.year }}).
 				{{ page.journal }}
+				<p></p>
+				<span class="badge badge-info">Keywords</span> {{page.keywords}}
 			</div>
 		</div>
 	</div>
