--- a/_layouts/member.html
+++ b/_layouts/member.html
@@ -127,6 +127,7 @@ layout: default
 		{% assign lastname = member.title | split: ' ' | last %}
 		{% assign firstinitial = member.title | split: ' ' | first | slice: 0 %}
 		{% assign searchstring = lastname | append: ' ' | append: firstinitial %}
+		{% assign searchkname = member.kname %}
 
 		{% for paper in site.categories.papers %}
 		{% if paper.authors contains searchstring %}
@@ -139,7 +140,7 @@ layout: default
 		<div class="head">Papers</div>
 		<div class="spacer"></div>
 		{% for paper in site.categories.papers %}
-		{% if paper.authors contains searchstring %}
+		{% if paper.authors contains searchkname %}
 		<p><a href="{{ paper.url }}" class="off">{{ paper.title }}</a>
 		{% endif %}
 		{% endfor %}
