papers: update papers

--- a/_layouts/member.html
+++ b/_layouts/member.html
@@ -136,14 +136,16 @@ layout: default
 		{% endfor %}
 
 		{% if papersq == true %}
-		<div class="bigspacer"></div>
-		<div class="head">Papers</div>
-		<div class="spacer"></div>
+			<div class="bigspacer"></div>
+			<div class="head">Papers</div>
+			<div class="spacer"></div>
 		{% for paper in site.categories.papers %}
-		{% if paper.authors contains searchkname %}
-		<p><a href="{{ paper.url }}" class="off">{{ paper.title }}</a>
-		{% endif %}
+			{% if paper.kauthors contains searchkname %}
+			<p><a href="{{ paper.url }}" class="off">{{ paper.title }}</a></p>
+			{% endif %}
 		{% endfor %}
+		{% else %}
+			<p>No papers found for {{ searchstring }} or {{ searchkname }}</p>
 		{% endif %}
 
 		{% for project in site.data.projects %}
