--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
     <link href="/css/style.css" rel="stylesheet" media="screen">
 
 	<!-- Favicon -->
-	<link rel="shortcut icon" href="/images/favicon.png"/>
+	<link rel="shortcut icon" href="/images/favicon.ico"/>
 	<!-- Typekit -->
 	<script>
 	  (function(d) {
